@@ -18,31 +18,74 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production GLBType : {@link ReferenceType} ::= <span class="component">{@link Modifiers}</span> <span class="component">&lt;ID:String&gt;</span> <span class="component">{@link BodyDecl}*</span> <span class="component">TypeBound:{@link Access}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:47
  */
-public class GLBType extends ReferenceType implements Cloneable {
-  /**
+public class GLBType extends ReferenceType {
+  private static final Logger logger = LoggerFactory.getLogger(GLBType.class);
+protected java.util.Map subtype_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean getSootClassDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected SootClass getSootClassDecl_value;
+/**
+   * @ast method 
+   * 
+   */
+  public GLBType() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GLBType(Modifiers p0, String p1, List<BodyDecl> p2, List<Access> p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GLBType(Modifiers p0, beaver.Symbol p1, List<BodyDecl> p2, List<Access> p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     subtype_TypeDecl_values = null;
     getSootClassDecl_computed = false;
     getSootClassDecl_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GLBType clone() throws CloneNotSupportedException {
     GLBType node = (GLBType)super.clone();
     node.subtype_TypeDecl_values = null;
@@ -52,29 +95,33 @@ public class GLBType extends ReferenceType implements Cloneable {
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GLBType copy() {
     try {
       GLBType node = (GLBType) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GLBType fullCopy() {
     GLBType tree = (GLBType) copy();
     if (children != null) {
@@ -88,28 +135,20 @@ public class GLBType extends ReferenceType implements Cloneable {
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1482
    */
-  public HashSet implementedInterfaces(){
+  @Override
+public HashSet implementedInterfaces(){
     HashSet ret = new HashSet();
     for (int i = 0; i < getNumTypeBound(); i++) {
       ret.addAll(getTypeBound(i).type().implementedInterfaces());
     }
     return ret;
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GLBType() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -117,68 +156,53 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[3];
     setChild(new List(), 1);
     setChild(new List(), 2);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GLBType(Modifiers p0, String p1, List<BodyDecl> p2, List<Access> p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public GLBType(Modifiers p0, beaver.Symbol p1, List<BodyDecl> p2, List<Access> p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 3;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -186,63 +210,70 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -250,10 +281,11 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -261,31 +293,34 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -293,21 +328,23 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -315,23 +352,25 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclList() {
     List<BodyDecl> list = (List<BodyDecl>)getChild(1);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -339,11 +378,12 @@ public class GLBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the TypeBound list.
    * @param list The new list node to be used as the TypeBound list.
    * @apilevel high-level
@@ -353,7 +393,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public void setTypeBoundList(List<Access> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the TypeBound list.
    * @return Number of children in the TypeBound list.
    * @apilevel high-level
@@ -363,7 +403,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public int getNumTypeBound() {
     return getTypeBoundList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the TypeBound list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the TypeBound list.
@@ -374,7 +414,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public int getNumTypeBoundNoTransform() {
     return getTypeBoundListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the TypeBound list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the TypeBound list.
@@ -386,7 +426,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public Access getTypeBound(int i) {
     return (Access)getTypeBoundList().getChild(i);
   }
-  /**
+/**
    * Append an element to the TypeBound list.
    * @param node The element to append to the TypeBound list.
    * @apilevel high-level
@@ -397,7 +437,7 @@ public class GLBType extends ReferenceType implements Cloneable {
     List<Access> list = (parent == null || state == null) ? getTypeBoundListNoTransform() : getTypeBoundList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -406,7 +446,7 @@ public class GLBType extends ReferenceType implements Cloneable {
     List<Access> list = getTypeBoundListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the TypeBound list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -418,7 +458,7 @@ public class GLBType extends ReferenceType implements Cloneable {
     List<Access> list = getTypeBoundList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * @return The node representing the TypeBound list.
    * @apilevel high-level
@@ -428,7 +468,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBounds() {
     return getTypeBoundList();
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeBound list.
@@ -439,7 +479,7 @@ public class GLBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBoundsNoTransform() {
     return getTypeBoundListNoTransform();
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * @return The node representing the TypeBound list.
    * @apilevel high-level
@@ -452,7 +492,7 @@ public class GLBType extends ReferenceType implements Cloneable {
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeBound list.
@@ -464,31 +504,35 @@ public class GLBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBoundListNoTransform() {
     return (List<Access>)getChildNoTransform(2);
   }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1472
    */
-  public String typeName() {
+  @Override
+public String typeName() {
     ASTNode$State state = state();
     try {
-    if(getNumTypeBound() == 0)
-      return "<NOTYPE>";
-    StringBuffer s = new StringBuffer();
+    if(getNumTypeBound() == 0) {
+		return "<NOTYPE>";
+	}
+    StringBuilder s = new StringBuilder();
     s.append(getTypeBound(0).type().typeName());
-    for(int i = 1; i < getNumTypeBound(); i++)
-      s.append(" & " + getTypeBound(i).type().typeName());
+    for(int i = 1; i < getNumTypeBound(); i++) {
+		s.append(" & " + getTypeBound(i).type().typeName());
+	}
     return s.toString();
   }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:347
    */
-  public boolean supertypeLUBType(LUBType type) {
+  @Override
+public boolean supertypeLUBType(LUBType type) {
     ASTNode$State state = state();
     try {
     ArrayList bounds = new ArrayList(getNumTypeBound());
@@ -500,24 +544,26 @@ public class GLBType extends ReferenceType implements Cloneable {
     finally {
     }
   }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:365
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -531,7 +577,7 @@ public class GLBType extends ReferenceType implements Cloneable {
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -552,49 +598,43 @@ public class GLBType extends ReferenceType implements Cloneable {
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeGLBType(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:366
    */
-  public boolean supertypeGLBType(GLBType type) {
+  @Override
+public boolean supertypeGLBType(GLBType type) {
     ASTNode$State state = state();
     try {  return this == type;  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getSootClassDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected SootClass getSootClassDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsCodegen
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/Jimple1.5Backend/GenericsCodegen.jrag:423
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SootClass getSootClassDecl() {
     if(getSootClassDecl_computed) {
       return getSootClassDecl_value;
@@ -603,17 +643,20 @@ public class GLBType extends ReferenceType implements Cloneable {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     getSootClassDecl_value = getSootClassDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) getSootClassDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getSootClassDecl_computed = true;
+	}
     return getSootClassDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SootClass getSootClassDecl_compute() {  return typeObject().getSootClassDecl();  }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
