@@ -18,16 +18,94 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production InterfaceDeclSubstituted : {@link InterfaceDecl} ::= <span class="component">&lt;Original:TypeDecl&gt;</span> <span class="component">{@link BodyDecl}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:42
  */
-public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable, MemberSubstitutor {
+public class InterfaceDeclSubstituted extends InterfaceDecl implements MemberSubstitutor {
+  private static final Logger logger = LoggerFactory.getLogger(InterfaceDeclSubstituted.class);
+/**
+   * @apilevel internal
+   * @ast method 
+   * 
+   */
+  
   /**
+   * @apilevel internal
+   */
+  protected TypeDecl tokenTypeDecl_Original;
+/**
+   * @apilevel internal
+   */
+  protected boolean getBodyDeclList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getBodyDeclList_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean sourceTypeDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl sourceTypeDecl_value;
+protected java.util.Map instanceOf_TypeDecl_values;
+protected java.util.Map subtype_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean localMethodsSignatureMap_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected HashMap localMethodsSignatureMap_value;
+protected java.util.Map localFields_String_values;
+protected java.util.Map localTypeDecls_String_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean constructors_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection constructors_value;
+/**
+   * @ast method 
+   * 
+   */
+  public InterfaceDeclSubstituted() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public InterfaceDeclSubstituted(Modifiers p0, String p1, List<Access> p2, TypeDecl p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setOriginal(p3);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public InterfaceDeclSubstituted(Modifiers p0, beaver.Symbol p1, List<Access> p2, TypeDecl p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setOriginal(p3);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     getBodyDeclList_computed = false;
     getBodyDeclList_value = null;
@@ -42,16 +120,18 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     constructors_computed = false;
     constructors_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public InterfaceDeclSubstituted clone() throws CloneNotSupportedException {
     InterfaceDeclSubstituted node = (InterfaceDeclSubstituted)super.clone();
     node.getBodyDeclList_computed = false;
@@ -70,29 +150,33 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public InterfaceDeclSubstituted copy() {
     try {
       InterfaceDeclSubstituted node = (InterfaceDeclSubstituted) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public InterfaceDeclSubstituted fullCopy() {
     InterfaceDeclSubstituted tree = (InterfaceDeclSubstituted) copy();
     if (children != null) {
@@ -111,16 +195,7 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     }
     return tree;
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public InterfaceDeclSubstituted() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -128,68 +203,53 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[3];
     setChild(new List(), 1);
     setChild(new List(), 2);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public InterfaceDeclSubstituted(Modifiers p0, String p1, List<Access> p2, TypeDecl p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setOriginal(p3);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public InterfaceDeclSubstituted(Modifiers p0, beaver.Symbol p1, List<Access> p2, TypeDecl p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setOriginal(p3);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 2;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -197,63 +257,70 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the SuperInterfaceId list.
    * @param list The new list node to be used as the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperInterfaceIdList(List<Access> list) {
+  @Override
+public void setSuperInterfaceIdList(List<Access> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the SuperInterfaceId list.
    * @return Number of children in the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumSuperInterfaceId() {
+  @Override
+public int getNumSuperInterfaceId() {
     return getSuperInterfaceIdList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the SuperInterfaceId list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the SuperInterfaceId list.
@@ -261,10 +328,11 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public int getNumSuperInterfaceIdNoTransform() {
+  @Override
+public int getNumSuperInterfaceIdNoTransform() {
     return getSuperInterfaceIdListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the SuperInterfaceId list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the SuperInterfaceId list.
@@ -272,31 +340,34 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperInterfaceId(int i) {
     return (Access)getSuperInterfaceIdList().getChild(i);
   }
-  /**
+/**
    * Append an element to the SuperInterfaceId list.
    * @param node The element to append to the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addSuperInterfaceId(Access node) {
+  @Override
+public void addSuperInterfaceId(Access node) {
     List<Access> list = (parent == null || state == null) ? getSuperInterfaceIdListNoTransform() : getSuperInterfaceIdList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addSuperInterfaceIdNoTransform(Access node) {
+  @Override
+public void addSuperInterfaceIdNoTransform(Access node) {
     List<Access> list = getSuperInterfaceIdListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the SuperInterfaceId list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -304,21 +375,23 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public void setSuperInterfaceId(Access node, int i) {
+  @Override
+public void setSuperInterfaceId(Access node, int i) {
     List<Access> list = getSuperInterfaceIdList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * @return The node representing the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getSuperInterfaceIds() {
+  @Override
+public List<Access> getSuperInterfaceIds() {
     return getSuperInterfaceIdList();
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the SuperInterfaceId list.
@@ -326,23 +399,25 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public List<Access> getSuperInterfaceIdsNoTransform() {
+  @Override
+public List<Access> getSuperInterfaceIdsNoTransform() {
     return getSuperInterfaceIdListNoTransform();
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * @return The node representing the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getSuperInterfaceIdList() {
     List<Access> list = (List<Access>)getChild(1);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the SuperInterfaceId list.
@@ -350,11 +425,12 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getSuperInterfaceIdListNoTransform() {
     return (List<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the lexeme Original.
    * @param value The new value for the lexeme Original.
    * @apilevel high-level
@@ -364,17 +440,7 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   public void setOriginal(TypeDecl value) {
     tokenTypeDecl_Original = value;
   }
-  /**
-   * @apilevel internal
-   * @ast method 
-   * 
-   */
-  
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl tokenTypeDecl_Original;
-  /**
+/**
    * Retrieves the value for the lexeme Original.
    * @return The value for the lexeme Original.
    * @apilevel high-level
@@ -384,27 +450,29 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   public TypeDecl getOriginal() {
     return tokenTypeDecl_Original;
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -412,10 +480,11 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -423,31 +492,34 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -455,21 +527,23 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -477,10 +551,11 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -488,10 +563,11 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclListNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(2);
   }
-  /**
+/**
    * Retrieves the child position of the BodyDecl list.
    * @return The the child position of the BodyDecl list.
    * @apilevel low-level
@@ -501,31 +577,25 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   protected int getBodyDeclListChildPosition() {
     return 2;
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:569
    */
-  public TypeDecl hostType() {
+  @Override
+public TypeDecl hostType() {
     ASTNode$State state = state();
     try {  return getOriginal();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getBodyDeclList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getBodyDeclList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1051
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getBodyDeclList() {
     if(getBodyDeclList_computed) {
       return (List) getChild(getBodyDeclListChildPosition());
@@ -535,38 +605,34 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   boolean isFinal = this.is$Final();
     getBodyDeclList_value = getBodyDeclList_compute();
     setBodyDeclList(getBodyDeclList_value);
-      if(isFinal && num == state().boundariesCrossed) getBodyDeclList_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getBodyDeclList_computed = true;
+	}
     return (List) getChild(getBodyDeclListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getBodyDeclList_compute() {  return new BodyDeclList();  }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1306
    */
-  public TypeDecl original() {
+  @Override
+public TypeDecl original() {
     ASTNode$State state = state();
     try {  return getOriginal().original();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean sourceTypeDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl sourceTypeDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect SourceDeclarations
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1507
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl sourceTypeDecl() {
     if(sourceTypeDecl_computed) {
       return sourceTypeDecl_value;
@@ -575,23 +641,27 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     sourceTypeDecl_value = sourceTypeDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) sourceTypeDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		sourceTypeDecl_computed = true;
+	}
     return sourceTypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl sourceTypeDecl_compute() {  return original().sourceTypeDecl();  }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:487
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -599,31 +669,35 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:501
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -637,7 +711,7 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -658,60 +732,55 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeInterfaceDeclSubstituted(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:503
    */
-  public boolean supertypeInterfaceDeclSubstituted(InterfaceDeclSubstituted type) {
+  @Override
+public boolean supertypeInterfaceDeclSubstituted(InterfaceDeclSubstituted type) {
     ASTNode$State state = state();
     try {  return original() == type.original() && type.enclosingType().subtype(enclosingType()) || super.supertypeInterfaceDeclSubstituted(type);  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:437
    */
-  public boolean supertypeInterfaceDecl(InterfaceDecl type) {
+  @Override
+public boolean supertypeInterfaceDecl(InterfaceDecl type) {
     ASTNode$State state = state();
     try {  return super.supertypeInterfaceDecl(type) || original().supertypeInterfaceDecl(type);  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean localMethodsSignatureMap_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected HashMap localMethodsSignatureMap_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1084
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public HashMap localMethodsSignatureMap() {
     if(localMethodsSignatureMap_computed) {
       return localMethodsSignatureMap_value;
@@ -720,10 +789,12 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     localMethodsSignatureMap_value = localMethodsSignatureMap_compute();
-      if(true) localMethodsSignatureMap_computed = true;
+      if(true) {
+		localMethodsSignatureMap_computed = true;
+	}
     return localMethodsSignatureMap_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private HashMap localMethodsSignatureMap_compute() {
@@ -753,16 +824,18 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     }
     return map;
   }
-  protected java.util.Map localFields_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1119
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localFields(String name) {
     Object _parameters = name;
-    if(localFields_String_values == null) localFields_String_values = new java.util.HashMap(4);
+    if(localFields_String_values == null) {
+		localFields_String_values = new java.util.HashMap(4);
+	}
     if(localFields_String_values.containsKey(_parameters)) {
       return (SimpleSet)localFields_String_values.get(_parameters);
     }
@@ -770,10 +843,12 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     SimpleSet localFields_String_value = localFields_compute(name);
-      if(true) localFields_String_values.put(_parameters, localFields_String_value);
+      if(true) {
+		localFields_String_values.put(_parameters, localFields_String_value);
+	}
     return localFields_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localFields_compute(String name) {
@@ -803,24 +878,26 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     }
     return set;
   }
-  protected java.util.Map localTypeDecls_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1154
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localTypeDecls(String name) {
     Object _parameters = name;
-    if(localTypeDecls_String_values == null) localTypeDecls_String_values = new java.util.HashMap(4);
+    if(localTypeDecls_String_values == null) {
+		localTypeDecls_String_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(localTypeDecls_String_values.containsKey(_parameters)) {
       Object _o = localTypeDecls_String_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return (SimpleSet)_o;
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -834,7 +911,7 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
       boolean isFinal = this.is$Final();
       SimpleSet new_localTypeDecls_String_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_localTypeDecls_String_value = localTypeDecls_compute(name);
         if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
@@ -855,21 +932,21 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
       state.IN_CIRCLE = false; 
       return new_localTypeDecls_String_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return (SimpleSet)_value.value;
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
+	if (state.RESET_CYCLE) {
         localTypeDecls_String_values.remove(_parameters);
       }
       else if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
         state.CHANGE = true;
         _value.value = new_localTypeDecls_String_value;
       }
-      return new_localTypeDecls_String_value;
-    }
-    return (SimpleSet)_value.value;
+	return new_localTypeDecls_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localTypeDecls_compute(String name) {
@@ -920,20 +997,13 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     }
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean constructors_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection constructors_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1213
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Collection constructors() {
     if(constructors_computed) {
       return constructors_value;
@@ -942,10 +1012,12 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     constructors_value = constructors_compute();
-      if(isFinal && num == state().boundariesCrossed) constructors_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		constructors_computed = true;
+	}
     return constructors_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection constructors_compute() {
@@ -967,10 +1039,11 @@ public class InterfaceDeclSubstituted extends InterfaceDecl implements Cloneable
     }
     return set;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
