@@ -18,16 +18,65 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production LUBType : {@link ReferenceType} ::= <span class="component">{@link Modifiers}</span> <span class="component">&lt;ID:String&gt;</span> <span class="component">{@link BodyDecl}*</span> <span class="component">TypeBound:{@link Access}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:46
  */
-public class LUBType extends ReferenceType implements Cloneable {
-  /**
+public class LUBType extends ReferenceType {
+  private static final Logger logger = LoggerFactory.getLogger(LUBType.class);
+/**
+   * @apilevel internal
+   */
+  protected boolean lub_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl lub_value;
+protected java.util.Map subtype_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean getSootClassDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected SootClass getSootClassDecl_value;
+/**
+   * @ast method 
+   * 
+   */
+  public LUBType() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public LUBType(Modifiers p0, String p1, List<BodyDecl> p2, List<Access> p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public LUBType(Modifiers p0, beaver.Symbol p1, List<BodyDecl> p2, List<Access> p3) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     lub_computed = false;
     lub_value = null;
@@ -35,16 +84,18 @@ public class LUBType extends ReferenceType implements Cloneable {
     getSootClassDecl_computed = false;
     getSootClassDecl_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public LUBType clone() throws CloneNotSupportedException {
     LUBType node = (LUBType)super.clone();
     node.lub_computed = false;
@@ -56,29 +107,33 @@ public class LUBType extends ReferenceType implements Cloneable {
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public LUBType copy() {
     try {
       LUBType node = (LUBType) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public LUBType fullCopy() {
     LUBType tree = (LUBType) copy();
     if (children != null) {
@@ -92,7 +147,7 @@ public class LUBType extends ReferenceType implements Cloneable {
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:668
@@ -107,13 +162,13 @@ public class LUBType extends ReferenceType implements Cloneable {
         if(first) {
           result.addAll(EST);
           first = false;
-        }
-        else
-          result.retainAll(EST);
+        } else {
+			result.retainAll(EST);
+		}
       }
       return result;
     }
-  /**
+/**
      * The minimal erased candidate set for Tj
      * is MEC = {V | V in EC, forall  W != V in EC, not W <: V}
      * @return minimal erased candidate set for Tj
@@ -123,23 +178,26 @@ public class LUBType extends ReferenceType implements Cloneable {
    */
   public static HashSet MEC(ArrayList list) {
       HashSet EC = LUBType.EC(list);
-      if(EC.size() == 1)
-        return EC;
+      if(EC.size() == 1) {
+		return EC;
+	}
       HashSet MEC = new HashSet();
       for(Iterator iter = EC.iterator(); iter.hasNext(); ) {
         TypeDecl V = (TypeDecl)iter.next();
         boolean keep = true;
         for(Iterator i2 = EC.iterator(); i2.hasNext(); ) {
           TypeDecl W = (TypeDecl)i2.next();
-          if(!(V instanceof TypeVariable) && V != W && W.instanceOf(V))
-            keep = false;
+          if(!(V instanceof TypeVariable) && V != W && W.instanceOf(V)) {
+			keep = false;
+		}
         }
-        if(keep)
-          MEC.add(V);
+        if(keep) {
+			MEC.add(V);
+		}
       }
       return MEC;
     }
-  /**
+/**
      * relevant invocations of G, Inv(G)
      * Inv(G) = {V | 1 <= i <= k, V in ST(Ui), V = G<...>}
      * @return set of relevant invocations of G, Inv(G)
@@ -153,13 +211,14 @@ public class LUBType extends ReferenceType implements Cloneable {
         TypeDecl U = (TypeDecl)iter.next();
         for(Iterator i2 = LUBType.ST(U).iterator(); i2.hasNext(); ) {
           TypeDecl V = (TypeDecl)i2.next();
-          if(V instanceof ParTypeDecl && !V.isRawType() && ((ParTypeDecl)V).genericDecl() == G)
-            result.add(V);
+          if(V instanceof ParTypeDecl && !V.isRawType() && ((ParTypeDecl)V).genericDecl() == G) {
+			result.add(V);
+		}
         }
       }
       return result;
     }
-  /**
+/**
      * @return least containing invocation (lci)
      * @ast method 
    * @aspect GenericMethodsInference
@@ -172,17 +231,19 @@ public class LUBType extends ReferenceType implements Cloneable {
         ParTypeDecl decl = (ParTypeDecl)iter.next();
         if(first) {
           first = false;
-          for(int i = 0; i < decl.getNumArgument(); i++)
-            list.add(decl.getArgument(i).type());
+          for(int i = 0; i < decl.getNumArgument(); i++) {
+			list.add(decl.getArgument(i).type());
+		}
         }
         else {
-          for(int i = 0; i < decl.getNumArgument(); i++)
-            list.set(i, lcta((TypeDecl)list.get(i), decl.getArgument(i).type()));
+          for(int i = 0; i < decl.getNumArgument(); i++) {
+			list.set(i, lcta((TypeDecl)list.get(i), decl.getArgument(i).type()));
+		}
         }
       }
       return ((GenericTypeDecl)G).lookupParTypeDecl(list);
     }
-  /**
+/**
      * least containing type arguments
      * @ast method 
    * @aspect GenericMethodsInference
@@ -225,11 +286,11 @@ public class LUBType extends ReferenceType implements Cloneable {
         bounds.add(U);
         bounds.add(V);
         return GLBTypeFactory.glb(bounds).asWildcardSuper();
-      }
-      else
-        throw new Error("lcta not defined for (" + X.getClass().getName() + ", " + Y.getClass().getName());
+      } else {
+		throw new Error(new StringBuilder().append("lcta not defined for (").append(X.getClass().getName()).append(", ").append(Y.getClass().getName()).toString());
+	}
     }
-  /**
+/**
    * @ast method 
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:793
@@ -240,7 +301,7 @@ public class LUBType extends ReferenceType implements Cloneable {
       list.add(Y);
       return lub(list);
     }
-  /**
+/**
    * @ast method 
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:800
@@ -248,7 +309,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public TypeDecl lub(ArrayList list) {
       return lookupLUBType(list);
     }
-  /**
+/**
    * @ast method 
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:805
@@ -257,14 +318,15 @@ public class LUBType extends ReferenceType implements Cloneable {
       HashSet result = new HashSet();
       for(Iterator iter = LUBType.ST(t).iterator(); iter.hasNext(); ) {
         TypeDecl typeDecl = (TypeDecl)iter.next();
-        if(typeDecl instanceof TypeVariable)
-          result.add(typeDecl);
-        else
-          result.add(typeDecl.erasure());
+        if(typeDecl instanceof TypeVariable) {
+			result.add(typeDecl);
+		} else {
+			result.add(typeDecl.erasure());
+		}
       }
       return result;
     }
-  /**
+/**
      * @return supertype set of T
      * @ast method 
    * @aspect GenericMethodsInference
@@ -275,7 +337,7 @@ public class LUBType extends ReferenceType implements Cloneable {
       LUBType.addSupertypes(result, t);
       return result;
     }
-  /**
+/**
    * @ast method 
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:826
@@ -296,50 +358,45 @@ public class LUBType extends ReferenceType implements Cloneable {
         for(int i = 0; i < type.getNumSuperInterfaceId(); i++) {
           addSupertypes(set, type.getSuperInterfaceId(i).type());
         }
-        if(type.getNumSuperInterfaceId() == 0)
-          set.add(type.typeObject());
+        if(type.getNumSuperInterfaceId() == 0) {
+			set.add(type.typeObject());
+		}
       }
       else if(t instanceof TypeVariable) {
         TypeVariable type = (TypeVariable)t;
         for(int i = 0; i < type.getNumTypeBound(); i++) {
           addSupertypes(set, type.getTypeBound(i).type());
         }
-        if(type.getNumTypeBound() == 0)
-          set.add(type.typeObject());
+        if(type.getNumTypeBound() == 0) {
+			set.add(type.typeObject());
+		}
       }
       else if(t instanceof LUBType) {
         LUBType type = (LUBType)t;
         for(int i = 0; i < type.getNumTypeBound(); i++) {
           addSupertypes(set, type.getTypeBound(i).type());
         }
-        if(type.getNumTypeBound() == 0)
-          set.add(type.typeObject());
-      }
-      else
-        throw new Error("Operation not supported for " + t.fullName() + ", " + t.getClass().getName());
+        if(type.getNumTypeBound() == 0) {
+			set.add(type.typeObject());
+		}
+      } else {
+		throw new Error(new StringBuilder().append("Operation not supported for ").append(t.fullName()).append(", ").append(t.getClass().getName()).toString());
+	}
     }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1444
    */
-  public HashSet implementedInterfaces(){
+  @Override
+public HashSet implementedInterfaces(){
        HashSet ret = new HashSet();
        for (int i = 0; i < getNumTypeBound(); i++) {
            ret.addAll(getTypeBound(i).type().implementedInterfaces());
        }
        return ret;
    }
-  /**
-   * @ast method 
-   * 
-   */
-  public LUBType() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -347,68 +404,53 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[3];
     setChild(new List(), 1);
     setChild(new List(), 2);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public LUBType(Modifiers p0, String p1, List<BodyDecl> p2, List<Access> p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public LUBType(Modifiers p0, beaver.Symbol p1, List<BodyDecl> p2, List<Access> p3) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 3;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -416,63 +458,70 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -480,10 +529,11 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -491,31 +541,34 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -523,21 +576,23 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -545,23 +600,25 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclList() {
     List<BodyDecl> list = (List<BodyDecl>)getChild(1);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -569,11 +626,12 @@ public class LUBType extends ReferenceType implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the TypeBound list.
    * @param list The new list node to be used as the TypeBound list.
    * @apilevel high-level
@@ -583,7 +641,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public void setTypeBoundList(List<Access> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the TypeBound list.
    * @return Number of children in the TypeBound list.
    * @apilevel high-level
@@ -593,7 +651,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public int getNumTypeBound() {
     return getTypeBoundList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the TypeBound list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the TypeBound list.
@@ -604,7 +662,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public int getNumTypeBoundNoTransform() {
     return getTypeBoundListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the TypeBound list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the TypeBound list.
@@ -616,7 +674,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public Access getTypeBound(int i) {
     return (Access)getTypeBoundList().getChild(i);
   }
-  /**
+/**
    * Append an element to the TypeBound list.
    * @param node The element to append to the TypeBound list.
    * @apilevel high-level
@@ -627,7 +685,7 @@ public class LUBType extends ReferenceType implements Cloneable {
     List<Access> list = (parent == null || state == null) ? getTypeBoundListNoTransform() : getTypeBoundList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -636,7 +694,7 @@ public class LUBType extends ReferenceType implements Cloneable {
     List<Access> list = getTypeBoundListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the TypeBound list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -648,7 +706,7 @@ public class LUBType extends ReferenceType implements Cloneable {
     List<Access> list = getTypeBoundList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * @return The node representing the TypeBound list.
    * @apilevel high-level
@@ -658,7 +716,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBounds() {
     return getTypeBoundList();
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeBound list.
@@ -669,7 +727,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBoundsNoTransform() {
     return getTypeBoundListNoTransform();
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * @return The node representing the TypeBound list.
    * @apilevel high-level
@@ -682,7 +740,7 @@ public class LUBType extends ReferenceType implements Cloneable {
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the TypeBound list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeBound list.
@@ -694,15 +752,7 @@ public class LUBType extends ReferenceType implements Cloneable {
   public List<Access> getTypeBoundListNoTransform() {
     return (List<Access>)getChildNoTransform(2);
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean lub_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl lub_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:650
@@ -716,63 +766,72 @@ public class LUBType extends ReferenceType implements Cloneable {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     lub_value = lub_compute();
-      if(isFinal && num == state().boundariesCrossed) lub_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		lub_computed = true;
+	}
     return lub_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl lub_compute() {
     ArrayList list = new ArrayList();
-    for(int i = 0; i < getNumTypeBound(); i++)
-      list.add(getTypeBound(i).type());
+    for(int i = 0; i < getNumTypeBound(); i++) {
+		list.add(getTypeBound(i).type());
+	}
     ArrayList bounds = new ArrayList();
     for(Iterator iter = LUBType.MEC(list).iterator(); iter.hasNext(); ) {
       TypeDecl W = (TypeDecl)iter.next();
       TypeDecl C = W instanceof GenericTypeDecl ? lci(Inv(W, list), W) : W;
       bounds.add(C);
     }
-    if(bounds.size() == 1)
-      return (TypeDecl)bounds.iterator().next();
+    if(bounds.size() == 1) {
+		return (TypeDecl)bounds.iterator().next();
+	}
     return lookupLUBType(bounds);
   }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1434
    */
-  public String typeName() {
+  @Override
+public String typeName() {
     ASTNode$State state = state();
     try {
-    if(getNumTypeBound() == 0)
-      return "<NOTYPE>";
-    StringBuffer s = new StringBuffer();
+    if(getNumTypeBound() == 0) {
+		return "<NOTYPE>";
+	}
+    StringBuilder s = new StringBuilder();
     s.append(getTypeBound(0).type().typeName());
-    for(int i = 1; i < getNumTypeBound(); i++)
-      s.append(" & " + getTypeBound(i).type().typeName());
+    for(int i = 1; i < getNumTypeBound(); i++) {
+		s.append(" & " + getTypeBound(i).type().typeName());
+	}
     return s.toString();
   }
     finally {
     }
   }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:346
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -786,7 +845,7 @@ public class LUBType extends ReferenceType implements Cloneable {
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -807,52 +866,55 @@ public class LUBType extends ReferenceType implements Cloneable {
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeLUBType(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:421
    */
-  public boolean supertypeClassDecl(ClassDecl type) {
+  @Override
+public boolean supertypeClassDecl(ClassDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(lub());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:437
    */
-  public boolean supertypeInterfaceDecl(InterfaceDecl type) {
+  @Override
+public boolean supertypeInterfaceDecl(InterfaceDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(lub());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:366
    */
-  public boolean supertypeGLBType(GLBType type) {
+  @Override
+public boolean supertypeGLBType(GLBType type) {
     ASTNode$State state = state();
     try {
     ArrayList bounds = new ArrayList(getNumTypeBound());
@@ -864,20 +926,13 @@ public class LUBType extends ReferenceType implements Cloneable {
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getSootClassDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected SootClass getSootClassDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsCodegen
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/Jimple1.5Backend/GenericsCodegen.jrag:422
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SootClass getSootClassDecl() {
     if(getSootClassDecl_computed) {
       return getSootClassDecl_value;
@@ -886,17 +941,20 @@ public class LUBType extends ReferenceType implements Cloneable {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     getSootClassDecl_value = getSootClassDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) getSootClassDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getSootClassDecl_computed = true;
+	}
     return getSootClassDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SootClass getSootClassDecl_compute() {  return typeObject().getSootClassDecl();  }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
