@@ -18,17 +18,173 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * @production ParClassDecl : {@link ClassDecl} ::= <span class="component">Argument:{@link Access}*</span> <span class="component">[SuperClassAccess:{@link Access}]</span> <span class="component">Implements:{@link Access}*</span> <span class="component">{@link BodyDecl}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:6
  */
-public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, MemberSubstitutor {
-  /**
+public class ParClassDecl extends ClassDecl implements ParTypeDecl, MemberSubstitutor {
+  private static final Logger logger = LoggerFactory.getLogger(ParClassDecl.class);
+/**
+   * @apilevel internal
+   */
+  protected int involvesTypeParameters_visited = -1;
+/**
+   * @apilevel internal
+   */
+  protected boolean involvesTypeParameters_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean involvesTypeParameters_initialized = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean involvesTypeParameters_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean erasure_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl erasure_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean getSuperClassAccessOpt_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Opt getSuperClassAccessOpt_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean getImplementsList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getImplementsList_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean getBodyDeclList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getBodyDeclList_value;
+protected java.util.Map subtype_TypeDecl_values;
+protected java.util.Map sameStructure_TypeDecl_values;
+protected java.util.Map instanceOf_TypeDecl_values;
+protected java.util.Map sameSignature_ArrayList_values;
+/**
+   * @apilevel internal
+   */
+  protected int usesTypeVariable_visited = -1;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_initialized = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean sourceTypeDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl sourceTypeDecl_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean fullName_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected String fullName_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean typeName_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected String typeName_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean unimplementedMethods_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection unimplementedMethods_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean localMethodsSignatureMap_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected HashMap localMethodsSignatureMap_value;
+protected java.util.Map localFields_String_values;
+protected java.util.Map localTypeDecls_String_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean constructors_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection constructors_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean genericDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl genericDecl_value;
+/**
+   * @ast method 
+   * 
+   */
+  public ParClassDecl() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public ParClassDecl(Modifiers p0, String p1, List<Access> p2) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public ParClassDecl(Modifiers p0, beaver.Symbol p1, List<Access> p2) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     involvesTypeParameters_visited = -1;
     involvesTypeParameters_computed = false;
@@ -65,16 +221,18 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     genericDecl_computed = false;
     genericDecl_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public ParClassDecl clone() throws CloneNotSupportedException {
     ParClassDecl node = (ParClassDecl)super.clone();
     node.involvesTypeParameters_visited = -1;
@@ -115,29 +273,33 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public ParClassDecl copy() {
     try {
       ParClassDecl node = (ParClassDecl) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public ParClassDecl fullCopy() {
     ParClassDecl tree = (ParClassDecl) copy();
     if (children != null) {
@@ -160,20 +322,22 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsNameBinding
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:554
    */
-  public void collectErrors() {
+  @Override
+public void collectErrors() {
     // Disable error check for ParClassDecl which is an instanciated GenericClassDecl
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsPrettyPrint
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsPrettyPrint.jrag:34
    */
-  public void toString(StringBuffer s) {
+  @Override
+public void toString(StringBuffer s) {
       getModifiers().toString(s);
       s.append("class " + getID());
       s.append('<');
@@ -199,97 +363,102 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       }
       ppBodyDecls(s);
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:840
    */
-  public TypeDecl substitute(TypeVariable typeVariable) {
-    for(int i = 0; i < numTypeParameter(); i++)
-      if(typeParameter(i) == typeVariable)
-        return getArgument(i).type();
+  @Override
+public TypeDecl substitute(TypeVariable typeVariable) {
+    for(int i = 0; i < numTypeParameter(); i++) {
+		if(typeParameter(i) == typeVariable) {
+			return getArgument(i).type();
+		}
+	}
     return super.substitute(typeVariable);
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:853
    */
-  public int numTypeParameter() {
+  @Override
+public int numTypeParameter() {
     return ((GenericTypeDecl)original()).getNumTypeParameter(); 
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:856
    */
-  public TypeVariable typeParameter(int index) {
+  @Override
+public TypeVariable typeParameter(int index) {
     return ((GenericTypeDecl)original()).getTypeParameter(index);
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:888
    */
-  public Access substitute(Parameterization parTypeDecl) {
+  @Override
+public Access substitute(Parameterization parTypeDecl) {
     // TODO: include nesting as well....
-    if(parTypeDecl.isRawType())
-      return ((GenericTypeDecl)genericDecl()).rawType().createBoundAccess();
-    if(!usesTypeVariable())
-      return super.substitute(parTypeDecl);
+    if(parTypeDecl.isRawType()) {
+		return ((GenericTypeDecl)genericDecl()).rawType().createBoundAccess();
+	}
+    if(!usesTypeVariable()) {
+		return super.substitute(parTypeDecl);
+	}
     List list = new List();
-    for(int i = 0; i < getNumArgument(); i++)
-      list.add(getArgument(i).type().substitute(parTypeDecl));
+    for(int i = 0; i < getNumArgument(); i++) {
+		list.add(getArgument(i).type().substitute(parTypeDecl));
+	}
     return new ParTypeAccess(genericDecl().createQualifiedAccess(), list);
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:76
    */
-  public Access createQualifiedAccess() {
+  @Override
+public Access createQualifiedAccess() {
     List typeArgumentList = new List();
     for(int i = 0; i < getNumArgument(); i++) {
       Access a = (Access)getArgument(i);
-      if(a instanceof TypeAccess)
-        typeArgumentList.add(a.type().createQualifiedAccess());
-      else
-        typeArgumentList.add(a.fullCopy());
+      if(a instanceof TypeAccess) {
+		typeArgumentList.add(a.type().createQualifiedAccess());
+	} else {
+		typeArgumentList.add(a.fullCopy());
+	}
     }
     if(!isTopLevelType()) {
-      if(isRawType())
-        return enclosingType().createQualifiedAccess().qualifiesAccess(
+      if(isRawType()) {
+		return enclosingType().createQualifiedAccess().qualifiesAccess(
           new TypeAccess("", getID())
         );
-      else
-        return enclosingType().createQualifiedAccess().qualifiesAccess(
+	} else {
+		return enclosingType().createQualifiedAccess().qualifiesAccess(
           new ParTypeAccess(new TypeAccess("", getID()), typeArgumentList)
         );
+	}
     }
     else {
-      if(isRawType())
-        return new TypeAccess(packageName(), getID());
-      else
-        return new ParTypeAccess(new TypeAccess(packageName(), getID()), typeArgumentList);
+      if(isRawType()) {
+		return new TypeAccess(packageName(), getID());
+	} else {
+		return new ParTypeAccess(new TypeAccess(packageName(), getID()), typeArgumentList);
+	}
     }
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsCodegen
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/Jimple1.5Backend/GenericsCodegen.jrag:406
    */
-  public void transformation() {
+  @Override
+public void transformation() {
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public ParClassDecl() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -297,68 +466,55 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[5];
     setChild(new List(), 1);
     setChild(new Opt(), 2);
     setChild(new List(), 3);
     setChild(new List(), 4);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public ParClassDecl(Modifiers p0, String p1, List<Access> p2) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public ParClassDecl(Modifiers p0, beaver.Symbol p1, List<Access> p2) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 2;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -366,43 +522,48 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the Argument list.
    * @param list The new list node to be used as the Argument list.
    * @apilevel high-level
@@ -412,17 +573,18 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   public void setArgumentList(List<Access> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the Argument list.
    * @return Number of children in the Argument list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumArgument() {
+  @Override
+public int getNumArgument() {
     return getArgumentList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Argument list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Argument list.
@@ -433,7 +595,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   public int getNumArgumentNoTransform() {
     return getArgumentListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Argument list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Argument list.
@@ -441,11 +603,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getArgument(int i) {
     return (Access)getArgumentList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Argument list.
    * @param node The element to append to the Argument list.
    * @apilevel high-level
@@ -456,7 +619,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     List<Access> list = (parent == null || state == null) ? getArgumentListNoTransform() : getArgumentList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -465,7 +628,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     List<Access> list = getArgumentListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Argument list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -477,7 +640,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     List<Access> list = getArgumentList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Argument list.
    * @return The node representing the Argument list.
    * @apilevel high-level
@@ -487,7 +650,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   public List<Access> getArguments() {
     return getArgumentList();
   }
-  /**
+/**
    * Retrieves the Argument list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Argument list.
@@ -498,7 +661,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   public List<Access> getArgumentsNoTransform() {
     return getArgumentListNoTransform();
   }
-  /**
+/**
    * Retrieves the Argument list.
    * @return The node representing the Argument list.
    * @apilevel high-level
@@ -511,7 +674,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the Argument list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Argument list.
@@ -523,48 +686,52 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   public List<Access> getArgumentListNoTransform() {
     return (List<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the optional node for the SuperClassAccess child. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * @param opt The new node to be used as the optional node for the SuperClassAccess child.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccessOpt(Opt<Access> opt) {
+  @Override
+public void setSuperClassAccessOpt(Opt<Access> opt) {
     setChild(opt, 2);
   }
-  /**
+/**
    * Check whether the optional SuperClassAccess child exists.
    * @return {@code true} if the optional SuperClassAccess child exists, {@code false} if it does not.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public boolean hasSuperClassAccess() {
+  @Override
+public boolean hasSuperClassAccess() {
     return getSuperClassAccessOpt().getNumChild() != 0;
   }
-  /**
+/**
    * Retrieves the (optional) SuperClassAccess child.
    * @return The SuperClassAccess child, if it exists. Returns {@code null} otherwise.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperClassAccess() {
     return (Access)getSuperClassAccessOpt().getChild(0);
   }
-  /**
+/**
    * Replaces the (optional) SuperClassAccess child.
    * @param node The new node to be used as the SuperClassAccess child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccess(Access node) {
+  @Override
+public void setSuperClassAccess(Access node) {
     getSuperClassAccessOpt().setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the optional node for child SuperClassAccess. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The optional node for child SuperClassAccess.
@@ -572,11 +739,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOptNoTransform() {
     return (Opt<Access>)getChildNoTransform(2);
   }
-  /**
+/**
    * Retrieves the child position of the optional child SuperClassAccess.
    * @return The the child position of the optional child SuperClassAccess.
    * @apilevel low-level
@@ -586,27 +754,29 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   protected int getSuperClassAccessOptChildPosition() {
     return 2;
   }
-  /**
+/**
    * Replaces the Implements list.
    * @param list The new list node to be used as the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setImplementsList(List<Access> list) {
+  @Override
+public void setImplementsList(List<Access> list) {
     setChild(list, 3);
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * @return Number of children in the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumImplements() {
+  @Override
+public int getNumImplements() {
     return getImplementsList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Implements list.
@@ -614,10 +784,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public int getNumImplementsNoTransform() {
+  @Override
+public int getNumImplementsNoTransform() {
     return getImplementsListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Implements list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Implements list.
@@ -625,31 +796,34 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getImplements(int i) {
     return (Access)getImplementsList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Implements list.
    * @param node The element to append to the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addImplements(Access node) {
+  @Override
+public void addImplements(Access node) {
     List<Access> list = (parent == null || state == null) ? getImplementsListNoTransform() : getImplementsList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addImplementsNoTransform(Access node) {
+  @Override
+public void addImplementsNoTransform(Access node) {
     List<Access> list = getImplementsListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Implements list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -657,21 +831,23 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public void setImplements(Access node, int i) {
+  @Override
+public void setImplements(Access node, int i) {
     List<Access> list = getImplementsList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getImplementss() {
+  @Override
+public List<Access> getImplementss() {
     return getImplementsList();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -679,10 +855,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public List<Access> getImplementssNoTransform() {
+  @Override
+public List<Access> getImplementssNoTransform() {
     return getImplementsListNoTransform();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -690,10 +867,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public List<Access> getImplementsListNoTransform() {
+  @Override
+public List<Access> getImplementsListNoTransform() {
     return (List<Access>)getChildNoTransform(3);
   }
-  /**
+/**
    * Retrieves the child position of the Implements list.
    * @return The the child position of the Implements list.
    * @apilevel low-level
@@ -703,27 +881,29 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   protected int getImplementsListChildPosition() {
     return 3;
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 4);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -731,10 +911,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -742,31 +923,34 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -774,21 +958,23 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -796,10 +982,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -807,10 +994,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclListNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(4);
   }
-  /**
+/**
    * Retrieves the child position of the BodyDecl list.
    * @return The the child position of the BodyDecl list.
    * @apilevel low-level
@@ -820,28 +1008,13 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   protected int getBodyDeclListChildPosition() {
     return 4;
   }
-  /**
-   * @apilevel internal
-   */
-  protected int involvesTypeParameters_visited = -1;
-  /**
-   * @apilevel internal
-   */
-  protected boolean involvesTypeParameters_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean involvesTypeParameters_initialized = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean involvesTypeParameters_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericMethodsInference
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericMethodsInference.jrag:18
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean involvesTypeParameters() {
     if(involvesTypeParameters_computed) {
       return involvesTypeParameters_value;
@@ -859,8 +1032,9 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
         involvesTypeParameters_visited = state.CIRCLE_INDEX;
         state.CHANGE = false;
         boolean new_involvesTypeParameters_value = involvesTypeParameters_compute();
-        if (new_involvesTypeParameters_value!=involvesTypeParameters_value)
-          state.CHANGE = true;
+        if (new_involvesTypeParameters_value!=involvesTypeParameters_value) {
+			state.CHANGE = true;
+		}
         involvesTypeParameters_value = new_involvesTypeParameters_value; 
         state.CIRCLE_INDEX++;
       } while (state.CHANGE);
@@ -877,78 +1051,77 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return involvesTypeParameters_value;
     }
-    if(involvesTypeParameters_visited != state.CIRCLE_INDEX) {
-      involvesTypeParameters_visited = state.CIRCLE_INDEX;
-      if (state.RESET_CYCLE) {
+    if (involvesTypeParameters_visited == state.CIRCLE_INDEX) {
+		return involvesTypeParameters_value;
+	}
+	involvesTypeParameters_visited = state.CIRCLE_INDEX;
+	if (state.RESET_CYCLE) {
         involvesTypeParameters_computed = false;
         involvesTypeParameters_initialized = false;
         involvesTypeParameters_visited = -1;
         return involvesTypeParameters_value;
       }
-      boolean new_involvesTypeParameters_value = involvesTypeParameters_compute();
-      if (new_involvesTypeParameters_value!=involvesTypeParameters_value)
-        state.CHANGE = true;
-      involvesTypeParameters_value = new_involvesTypeParameters_value; 
-      return involvesTypeParameters_value;
-    }
-    return involvesTypeParameters_value;
+	boolean new_involvesTypeParameters_value = involvesTypeParameters_compute();
+	if (new_involvesTypeParameters_value!=involvesTypeParameters_value) {
+		state.CHANGE = true;
+	}
+	involvesTypeParameters_value = new_involvesTypeParameters_value;
+	return involvesTypeParameters_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean involvesTypeParameters_compute() {
-    for(int i = 0; i < getNumArgument(); i++)
-      if(getArgument(i).type().involvesTypeParameters())
-        return true;
+    for(int i = 0; i < getNumArgument(); i++) {
+		if(getArgument(i).type().involvesTypeParameters()) {
+			return true;
+		}
+	}
     return false;
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:569
    */
-  public TypeDecl hostType() {
+  @Override
+public TypeDecl hostType() {
     ASTNode$State state = state();
     try {  return original();  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:497
    */
-  public TypeDecl topLevelType() {
+  @Override
+public TypeDecl topLevelType() {
     ASTNode$State state = state();
     try {  return erasure().topLevelType();  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:245
    */
-  public boolean isRawType() {
+  @Override
+public boolean isRawType() {
     ASTNode$State state = state();
     try {  return isNestedType() && enclosingType().isRawType();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean erasure_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl erasure_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsErasure
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:350
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl erasure() {
     if(erasure_computed) {
       return erasure_value;
@@ -957,27 +1130,22 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     erasure_value = erasure_compute();
-      if(isFinal && num == state().boundariesCrossed) erasure_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		erasure_computed = true;
+	}
     return erasure_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl erasure_compute() {  return genericDecl();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getSuperClassAccessOpt_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Opt getSuperClassAccessOpt_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1015
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt getSuperClassAccessOpt() {
     if(getSuperClassAccessOpt_computed) {
       return (Opt) getChild(getSuperClassAccessOptChildPosition());
@@ -987,37 +1155,33 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   boolean isFinal = this.is$Final();
     getSuperClassAccessOpt_value = getSuperClassAccessOpt_compute();
     setSuperClassAccessOpt(getSuperClassAccessOpt_value);
-      if(isFinal && num == state().boundariesCrossed) getSuperClassAccessOpt_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getSuperClassAccessOpt_computed = true;
+	}
     return (Opt) getChild(getSuperClassAccessOptChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private Opt getSuperClassAccessOpt_compute() {
     GenericClassDecl decl = (GenericClassDecl)genericDecl();
     Opt opt;
     //System.err.println("Begin substituting extends clause");
-    if(decl.hasSuperClassAccess())
-      opt = new Opt((decl.getSuperClassAccess().type().substitute(this)));
-    else
-      opt = new Opt();
+    if(decl.hasSuperClassAccess()) {
+		opt = new Opt((decl.getSuperClassAccess().type().substitute(this)));
+	} else {
+		opt = new Opt();
+	}
     //System.err.println("End substituting extends clause");
     return opt;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getImplementsList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getImplementsList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1026
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getImplementsList() {
     if(getImplementsList_computed) {
       return (List) getChild(getImplementsListChildPosition());
@@ -1027,10 +1191,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   boolean isFinal = this.is$Final();
     getImplementsList_value = getImplementsList_compute();
     setImplementsList(getImplementsList_value);
-      if(isFinal && num == state().boundariesCrossed) getImplementsList_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getImplementsList_computed = true;
+	}
     return (List) getChild(getImplementsListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getImplementsList_compute() {
@@ -1040,20 +1206,13 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     //System.err.println("End substituting implements list");
     return list;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getBodyDeclList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getBodyDeclList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1035
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getBodyDeclList() {
     if(getBodyDeclList_computed) {
       return (List) getChild(getBodyDeclListChildPosition());
@@ -1063,53 +1222,59 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   boolean isFinal = this.is$Final();
     getBodyDeclList_value = getBodyDeclList_compute();
     setBodyDeclList(getBodyDeclList_value);
-      if(isFinal && num == state().boundariesCrossed) getBodyDeclList_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getBodyDeclList_computed = true;
+	}
     return (List) getChild(getBodyDeclListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getBodyDeclList_compute() {  return new BodyDeclList();  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:14
    */
-  public boolean supertypeGenericClassDecl(GenericClassDecl type) {
+  @Override
+public boolean supertypeGenericClassDecl(GenericClassDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(genericDecl().original());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:421
    */
-  public boolean supertypeClassDecl(ClassDecl type) {
+  @Override
+public boolean supertypeClassDecl(ClassDecl type) {
     ASTNode$State state = state();
     try {  return super.supertypeClassDecl(type);  }
     finally {
     }
   }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:124
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -1123,7 +1288,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -1144,64 +1309,68 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeParClassDecl(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:26
    */
-  public boolean supertypeRawClassDecl(RawClassDecl type) {
+  @Override
+public boolean supertypeRawClassDecl(RawClassDecl type) {
     ASTNode$State state = state();
     try {  return type.genericDecl().original().subtype(genericDecl().original());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:30
    */
-  public boolean supertypeRawInterfaceDecl(RawInterfaceDecl type) {
+  @Override
+public boolean supertypeRawInterfaceDecl(RawInterfaceDecl type) {
     ASTNode$State state = state();
     try {  return type.genericDecl().original().subtype(genericDecl().original());  }
     finally {
     }
   }
-  protected java.util.Map sameStructure_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:179
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean sameStructure(TypeDecl t) {
     Object _parameters = t;
-    if(sameStructure_TypeDecl_values == null) sameStructure_TypeDecl_values = new java.util.HashMap(4);
+    if(sameStructure_TypeDecl_values == null) {
+		sameStructure_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(sameStructure_TypeDecl_values.containsKey(_parameters)) {
       Object _o = sameStructure_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -1215,7 +1384,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       boolean isFinal = this.is$Final();
       boolean new_sameStructure_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_sameStructure_TypeDecl_value = sameStructure_compute(t);
         if (new_sameStructure_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -1236,53 +1405,61 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return new_sameStructure_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_sameStructure_TypeDecl_value = sameStructure_compute(t);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_sameStructure_TypeDecl_value = sameStructure_compute(t);
+	if (state.RESET_CYCLE) {
         sameStructure_TypeDecl_values.remove(_parameters);
       }
       else if (new_sameStructure_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_sameStructure_TypeDecl_value;
       }
-      return new_sameStructure_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_sameStructure_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean sameStructure_compute(TypeDecl t) {
-    if(!(t instanceof ParClassDecl))
-      return false;
+    if(!(t instanceof ParClassDecl)) {
+		return false;
+	}
     ParClassDecl type = (ParClassDecl)t;
-    if(type.genericDecl().original() == genericDecl().original() &&
-       type.getNumArgument() == getNumArgument()) {
-      for(int i = 0; i < getNumArgument(); i++)
-        if(!type.getArgument(i).type().sameStructure(getArgument(i).type()))
-          return false;
-      if(isNestedType() && type.isNestedType())
-        return type.enclosingType().sameStructure(enclosingType());
-      return true;
-    }
-    return false;
+    if (!(type.genericDecl().original() == genericDecl().original() &&
+       type.getNumArgument() == getNumArgument())) {
+		return false;
+	}
+	for(int i = 0; i < getNumArgument(); i++) {
+		if(!type.getArgument(i).type().sameStructure(getArgument(i).type())) {
+			return false;
+		}
+	}
+	if(isNestedType() && type.isNestedType()) {
+		return type.enclosingType().sameStructure(enclosingType());
+	}
+	return true;
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:125
    */
-  public boolean supertypeParClassDecl(ParClassDecl type) {
+  @Override
+public boolean supertypeParClassDecl(ParClassDecl type) {
     ASTNode$State state = state();
     try {
     if(type.genericDecl().original() == genericDecl().original() &&
        type.getNumArgument() == getNumArgument()) {
-      for(int i = 0; i < getNumArgument(); i++)
-        if(!type.getArgument(i).type().containedIn(getArgument(i).type()))
-          return false;
-      if(isNestedType() && type.isNestedType())
-        return type.enclosingType().subtype(enclosingType());
+      for(int i = 0; i < getNumArgument(); i++) {
+		if(!type.getArgument(i).type().containedIn(getArgument(i).type())) {
+			return false;
+		}
+	}
+      if(isNestedType() && type.isNestedType()) {
+		return type.enclosingType().subtype(enclosingType());
+	}
       return true;
     }
     return supertypeClassDecl(type);
@@ -1290,27 +1467,30 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:129
    */
-  public boolean supertypeParInterfaceDecl(ParInterfaceDecl type) {
+  @Override
+public boolean supertypeParInterfaceDecl(ParInterfaceDecl type) {
     ASTNode$State state = state();
     try {  return false;  }
     finally {
     }
   }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:396
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -1318,14 +1498,16 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  /**
+/**
 	 * A type is reifiable if it either refers to a non-parameterized type,
 	 * is a raw type, is a parameterized type with only unbound wildcard
 	 * parameters or is an array type with a reifiable type parameter.
@@ -1335,52 +1517,62 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
    * @aspect SafeVarargs
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java7Frontend/SafeVarargs.jrag:106
    */
-  public boolean isReifiable() {
+  @Override
+public boolean isReifiable() {
     ASTNode$State state = state();
     try {
-		if (isRawType())
+		if (isRawType()) {
 			return true;
+		}
 		for (int i = 0; i < getNumArgument(); ++i) {
-			if (!getArgument(i).type().isWildcard())
+			if (!getArgument(i).type().isWildcard()) {
 				return false;
+			}
 		}
 		return true;
 	}
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:244
    */
-  public boolean isParameterizedType() {
+  @Override
+public boolean isParameterizedType() {
     ASTNode$State state = state();
     try {  return true;  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsTypeCheck
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:380
    */
-  public boolean sameArgument(ParTypeDecl decl) {
+  @Override
+public boolean sameArgument(ParTypeDecl decl) {
     ASTNode$State state = state();
     try {
-    if(this == decl) return true;
-    if(genericDecl() != decl.genericDecl())
-      return false;
+    if(this == decl) {
+		return true;
+	}
+    if(genericDecl() != decl.genericDecl()) {
+		return false;
+	}
     for(int i = 0; i < getNumArgument(); i++) {
       TypeDecl t1 = getArgument(i).type();
       TypeDecl t2 = decl.getArgument(i).type();
       if(t1 instanceof ParTypeDecl && t2 instanceof ParTypeDecl) {
-        if(!((ParTypeDecl)t1).sameArgument((ParTypeDecl)t2))
-          return false;
+        if(!((ParTypeDecl)t1).sameArgument((ParTypeDecl)t2)) {
+			return false;
+		}
       }
       else {
-        if(t1 != t2)
-          return false;
+        if(t1 != t2) {
+			return false;
+		}
       }
     }
     return true;
@@ -1388,50 +1580,58 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:577
    */
-  public boolean sameSignature(Access a) {
+  @Override
+public boolean sameSignature(Access a) {
     ASTNode$State state = state();
     try {
     if(a instanceof ParTypeAccess) {
       ParTypeAccess ta = (ParTypeAccess)a;
-      if(genericDecl() != ta.genericDecl())
-        return false;
-      if(getNumArgument() != ta.getNumTypeArgument())
-        return false;
-      for(int i = 0; i < getNumArgument(); i++)
-        if(!getArgument(i).type().sameSignature(ta.getTypeArgument(i)))
-          return false;
+      if(genericDecl() != ta.genericDecl()) {
+		return false;
+	}
+      if(getNumArgument() != ta.getNumTypeArgument()) {
+		return false;
+	}
+      for(int i = 0; i < getNumArgument(); i++) {
+		if(!getArgument(i).type().sameSignature(ta.getTypeArgument(i))) {
+			return false;
+		}
+	}
       return true;
     }
-    else if(a instanceof TypeAccess && ((TypeAccess)a).isRaw())
-      return false;
+    else if(a instanceof TypeAccess && ((TypeAccess)a).isRaw()) {
+		return false;
+	}
     return super.sameSignature(a);
   }
     finally {
     }
   }
-  protected java.util.Map sameSignature_ArrayList_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:612
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean sameSignature(ArrayList list) {
     Object _parameters = list;
-    if(sameSignature_ArrayList_values == null) sameSignature_ArrayList_values = new java.util.HashMap(4);
+    if(sameSignature_ArrayList_values == null) {
+		sameSignature_ArrayList_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(sameSignature_ArrayList_values.containsKey(_parameters)) {
       Object _o = sameSignature_ArrayList_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -1445,7 +1645,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       boolean isFinal = this.is$Final();
       boolean new_sameSignature_ArrayList_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_sameSignature_ArrayList_value = sameSignature_compute(list);
         if (new_sameSignature_ArrayList_value!=((Boolean)_value.value).booleanValue()) {
@@ -1466,53 +1666,41 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return new_sameSignature_ArrayList_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_sameSignature_ArrayList_value = sameSignature_compute(list);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_sameSignature_ArrayList_value = sameSignature_compute(list);
+	if (state.RESET_CYCLE) {
         sameSignature_ArrayList_values.remove(_parameters);
       }
       else if (new_sameSignature_ArrayList_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_sameSignature_ArrayList_value;
       }
-      return new_sameSignature_ArrayList_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_sameSignature_ArrayList_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean sameSignature_compute(ArrayList list) {
-    if(getNumArgument() != list.size())
-      return false;
-    for(int i = 0; i < list.size(); i++)
-      if(getArgument(i).type() != list.get(i))
-        return false;
+    if(getNumArgument() != list.size()) {
+		return false;
+	}
+    for(int i = 0; i < list.size(); i++) {
+		if(getArgument(i).type() != list.get(i)) {
+			return false;
+		}
+	}
     return true;
   }
-  /**
-   * @apilevel internal
-   */
-  protected int usesTypeVariable_visited = -1;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_initialized = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1069
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean usesTypeVariable() {
     if(usesTypeVariable_computed) {
       return usesTypeVariable_value;
@@ -1530,8 +1718,9 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
         usesTypeVariable_visited = state.CIRCLE_INDEX;
         state.CHANGE = false;
         boolean new_usesTypeVariable_value = usesTypeVariable_compute();
-        if (new_usesTypeVariable_value!=usesTypeVariable_value)
-          state.CHANGE = true;
+        if (new_usesTypeVariable_value!=usesTypeVariable_value) {
+			state.CHANGE = true;
+		}
         usesTypeVariable_value = new_usesTypeVariable_value; 
         state.CIRCLE_INDEX++;
       } while (state.CHANGE);
@@ -1548,58 +1737,56 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return usesTypeVariable_value;
     }
-    if(usesTypeVariable_visited != state.CIRCLE_INDEX) {
-      usesTypeVariable_visited = state.CIRCLE_INDEX;
-      if (state.RESET_CYCLE) {
+    if (usesTypeVariable_visited == state.CIRCLE_INDEX) {
+		return usesTypeVariable_value;
+	}
+	usesTypeVariable_visited = state.CIRCLE_INDEX;
+	if (state.RESET_CYCLE) {
         usesTypeVariable_computed = false;
         usesTypeVariable_initialized = false;
         usesTypeVariable_visited = -1;
         return usesTypeVariable_value;
       }
-      boolean new_usesTypeVariable_value = usesTypeVariable_compute();
-      if (new_usesTypeVariable_value!=usesTypeVariable_value)
-        state.CHANGE = true;
-      usesTypeVariable_value = new_usesTypeVariable_value; 
-      return usesTypeVariable_value;
-    }
-    return usesTypeVariable_value;
+	boolean new_usesTypeVariable_value = usesTypeVariable_compute();
+	if (new_usesTypeVariable_value!=usesTypeVariable_value) {
+		state.CHANGE = true;
+	}
+	usesTypeVariable_value = new_usesTypeVariable_value;
+	return usesTypeVariable_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean usesTypeVariable_compute() {
-    if(super.usesTypeVariable())
-      return true;
-    for(int i = 0; i < getNumArgument(); i++)
-      if(getArgument(i).type().usesTypeVariable())
-        return true;
+    if(super.usesTypeVariable()) {
+		return true;
+	}
+    for(int i = 0; i < getNumArgument(); i++) {
+		if(getArgument(i).type().usesTypeVariable()) {
+			return true;
+		}
+	}
     return false;
   }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1306
    */
-  public TypeDecl original() {
+  @Override
+public TypeDecl original() {
     ASTNode$State state = state();
     try {  return genericDecl().original();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean sourceTypeDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl sourceTypeDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect SourceDeclarations
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1505
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl sourceTypeDecl() {
     if(sourceTypeDecl_computed) {
       return sourceTypeDecl_value;
@@ -1608,27 +1795,22 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     sourceTypeDecl_value = sourceTypeDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) sourceTypeDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		sourceTypeDecl_computed = true;
+	}
     return sourceTypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl sourceTypeDecl_compute() {  return genericDecl().original().sourceTypeDecl();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean fullName_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected String fullName_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:12
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public String fullName() {
     if(fullName_computed) {
       return fullName_value;
@@ -1637,34 +1819,31 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     fullName_value = fullName_compute();
-      if(isFinal && num == state().boundariesCrossed) fullName_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		fullName_computed = true;
+	}
     return fullName_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private String fullName_compute() {
-    if(isNestedType())
-      return enclosingType().fullName() + "." + nameWithArgs();
+    if(isNestedType()) {
+		return new StringBuilder().append(enclosingType().fullName()).append(".").append(nameWithArgs()).toString();
+	}
     String packageName = packageName();
-    if(packageName.equals(""))
-      return nameWithArgs();
-    return packageName + "." + nameWithArgs();
+    if("".equals(packageName)) {
+		return nameWithArgs();
+	}
+    return new StringBuilder().append(packageName).append(".").append(nameWithArgs()).toString();
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean typeName_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected String typeName_value;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:21
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public String typeName() {
     if(typeName_computed) {
       return typeName_value;
@@ -1673,34 +1852,40 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     typeName_value = typeName_compute();
-      if(isFinal && num == state().boundariesCrossed) typeName_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		typeName_computed = true;
+	}
     return typeName_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private String typeName_compute() {
-    if(isNestedType())
-      return enclosingType().typeName() + "." + nameWithArgs();
+    if(isNestedType()) {
+		return new StringBuilder().append(enclosingType().typeName()).append(".").append(nameWithArgs()).toString();
+	}
     String packageName = packageName();
-    if(packageName.equals("") || packageName.equals(PRIMITIVE_PACKAGE_NAME))
-      return nameWithArgs();
-    return packageName + "." + nameWithArgs();
+    if("".equals(packageName) || packageName.equals(PRIMITIVE_PACKAGE_NAME)) {
+		return nameWithArgs();
+	}
+    return new StringBuilder().append(packageName).append(".").append(nameWithArgs()).toString();
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:30
    */
-  public String nameWithArgs() {
+  @Override
+public String nameWithArgs() {
     ASTNode$State state = state();
     try {
     StringBuffer s = new StringBuffer();
     s.append(name());
     s.append("<");
     for(int i = 0; i < getNumArgument(); i++) {
-      if(i != 0)
-        s.append(", ");
+      if(i != 0) {
+		s.append(", ");
+	}
       s.append(getArgument(i).type().fullName());
     }
     s.append(">");
@@ -1709,20 +1894,13 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean unimplementedMethods_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection unimplementedMethods_value;
-  /**
+/**
    * @attribute syn
    * @aspect MethodSignature15
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/MethodSignature.jrag:406
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Collection unimplementedMethods() {
     if(unimplementedMethods_computed) {
       return unimplementedMethods_value;
@@ -1731,10 +1909,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     unimplementedMethods_value = unimplementedMethods_compute();
-      if(isFinal && num == state().boundariesCrossed) unimplementedMethods_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		unimplementedMethods_computed = true;
+	}
     return unimplementedMethods_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection unimplementedMethods_compute() {
@@ -1746,25 +1926,19 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     for(Iterator iter = super.unimplementedMethods().iterator(); iter.hasNext(); ) {
       MethodDecl m = (MethodDecl)iter.next();
-      if(set.contains(m.sourceMethodDecl()))
-        result.add(m);
+      if(set.contains(m.sourceMethodDecl())) {
+		result.add(m);
+	}
     }
     return result;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean localMethodsSignatureMap_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected HashMap localMethodsSignatureMap_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1084
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public HashMap localMethodsSignatureMap() {
     if(localMethodsSignatureMap_computed) {
       return localMethodsSignatureMap_value;
@@ -1773,10 +1947,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     localMethodsSignatureMap_value = localMethodsSignatureMap_compute();
-      if(true) localMethodsSignatureMap_computed = true;
+      if(true) {
+		localMethodsSignatureMap_computed = true;
+	}
     return localMethodsSignatureMap_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private HashMap localMethodsSignatureMap_compute() {
@@ -1806,16 +1982,18 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     return map;
   }
-  protected java.util.Map localFields_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1119
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localFields(String name) {
     Object _parameters = name;
-    if(localFields_String_values == null) localFields_String_values = new java.util.HashMap(4);
+    if(localFields_String_values == null) {
+		localFields_String_values = new java.util.HashMap(4);
+	}
     if(localFields_String_values.containsKey(_parameters)) {
       return (SimpleSet)localFields_String_values.get(_parameters);
     }
@@ -1823,10 +2001,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     SimpleSet localFields_String_value = localFields_compute(name);
-      if(true) localFields_String_values.put(_parameters, localFields_String_value);
+      if(true) {
+		localFields_String_values.put(_parameters, localFields_String_value);
+	}
     return localFields_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localFields_compute(String name) {
@@ -1856,24 +2036,26 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     return set;
   }
-  protected java.util.Map localTypeDecls_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1154
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localTypeDecls(String name) {
     Object _parameters = name;
-    if(localTypeDecls_String_values == null) localTypeDecls_String_values = new java.util.HashMap(4);
+    if(localTypeDecls_String_values == null) {
+		localTypeDecls_String_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(localTypeDecls_String_values.containsKey(_parameters)) {
       Object _o = localTypeDecls_String_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return (SimpleSet)_o;
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -1887,7 +2069,7 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       boolean isFinal = this.is$Final();
       SimpleSet new_localTypeDecls_String_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_localTypeDecls_String_value = localTypeDecls_compute(name);
         if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
@@ -1908,21 +2090,21 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
       state.IN_CIRCLE = false; 
       return new_localTypeDecls_String_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return (SimpleSet)_value.value;
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
+	if (state.RESET_CYCLE) {
         localTypeDecls_String_values.remove(_parameters);
       }
       else if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
         state.CHANGE = true;
         _value.value = new_localTypeDecls_String_value;
       }
-      return new_localTypeDecls_String_value;
-    }
-    return (SimpleSet)_value.value;
+	return new_localTypeDecls_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localTypeDecls_compute(String name) {
@@ -1973,20 +2155,13 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean constructors_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection constructors_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1213
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Collection constructors() {
     if(constructors_computed) {
       return constructors_value;
@@ -1995,10 +2170,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     constructors_value = constructors_compute();
-      if(isFinal && num == state().boundariesCrossed) constructors_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		constructors_computed = true;
+	}
     return constructors_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection constructors_compute() {
@@ -2020,20 +2197,13 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     }
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean genericDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl genericDecl_value;
-  /**
+/**
    * @attribute inh
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:45
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl genericDecl() {
     if(genericDecl_computed) {
       return genericDecl_value;
@@ -2042,14 +2212,17 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     genericDecl_value = getParent().Define_TypeDecl_genericDecl(this, null);
-      if(isFinal && num == state().boundariesCrossed) genericDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		genericDecl_computed = true;
+	}
     return genericDecl_value;
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:476
    * @apilevel internal
    */
-  public NameType Define_NameType_nameType(ASTNode caller, ASTNode child) {
+  @Override
+public NameType Define_NameType_nameType(ASTNode caller, ASTNode child) {
     if(caller == getArgumentListNoTransform())  {
     int childIndex = caller.getIndexOfChild(child);
     return NameType.TYPE_NAME;
@@ -2057,11 +2230,12 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     else {      return super.Define_NameType_nameType(caller, child);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:52
    * @apilevel internal
    */
-  public TypeDecl Define_TypeDecl_genericDecl(ASTNode caller, ASTNode child) {
+  @Override
+public TypeDecl Define_TypeDecl_genericDecl(ASTNode caller, ASTNode child) {
     if(caller == getBodyDeclListNoTransform())  { 
     int index = caller.getIndexOfChild(child);
     {
@@ -2075,10 +2249,11 @@ public class ParClassDecl extends ClassDecl implements Cloneable, ParTypeDecl, M
     else {      return getParent().Define_TypeDecl_genericDecl(this, caller);
     }
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
