@@ -18,32 +18,72 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production RawClassDecl : {@link ParClassDecl} ::= <span class="component">Argument:{@link Access}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:7
  */
-public class RawClassDecl extends ParClassDecl implements Cloneable {
-  /**
+public class RawClassDecl extends ParClassDecl {
+  private static final Logger logger = LoggerFactory.getLogger(RawClassDecl.class);
+/**
+   * @apilevel internal
+   */
+  protected boolean getArgumentList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getArgumentList_value;
+protected java.util.Map subtype_TypeDecl_values;
+protected java.util.Map instanceOf_TypeDecl_values;
+/**
+   * @ast method 
+   * 
+   */
+  public RawClassDecl() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public RawClassDecl(Modifiers p0, String p1) {
+    setChild(p0, 0);
+    setID(p1);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public RawClassDecl(Modifiers p0, beaver.Symbol p1) {
+    setChild(p0, 0);
+    setID(p1);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     getArgumentList_computed = false;
     getArgumentList_value = null;
     subtype_TypeDecl_values = null;
     instanceOf_TypeDecl_values = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public RawClassDecl clone() throws CloneNotSupportedException {
     RawClassDecl node = (RawClassDecl)super.clone();
     node.getArgumentList_computed = false;
@@ -54,29 +94,33 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public RawClassDecl copy() {
     try {
       RawClassDecl node = (RawClassDecl) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public RawClassDecl fullCopy() {
     RawClassDecl tree = (RawClassDecl) copy();
     if (children != null) {
@@ -100,34 +144,28 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:899
    */
-  public Access substitute(Parameterization parTypeDecl) { return createBoundAccess(); }
-  /**
+  @Override
+public Access substitute(Parameterization parTypeDecl) { return createBoundAccess(); }
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:954
    */
-  public Access substituteReturnType(Parameterization parTypeDecl) { return createBoundAccess(); }
-  /**
+  @Override
+public Access substituteReturnType(Parameterization parTypeDecl) { return createBoundAccess(); }
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:974
    */
-  public Access substituteParameterType(Parameterization parTypeDecl) { return createBoundAccess(); }
-  /**
-   * @ast method 
-   * 
-   */
-  public RawClassDecl() {
-    super();
-
-
-  }
-  /**
+  @Override
+public Access substituteParameterType(Parameterization parTypeDecl) { return createBoundAccess(); }
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -135,66 +173,55 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[5];
     setChild(new Opt(), 1);
     setChild(new List(), 2);
     setChild(new List(), 3);
     setChild(new List(), 4);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public RawClassDecl(Modifiers p0, String p1) {
-    setChild(p0, 0);
-    setID(p1);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public RawClassDecl(Modifiers p0, beaver.Symbol p1) {
-    setChild(p0, 0);
-    setID(p1);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 1;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -202,84 +229,93 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the optional node for the SuperClassAccess child. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * @param opt The new node to be used as the optional node for the SuperClassAccess child.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccessOpt(Opt<Access> opt) {
+  @Override
+public void setSuperClassAccessOpt(Opt<Access> opt) {
     setChild(opt, 1);
   }
-  /**
+/**
    * Check whether the optional SuperClassAccess child exists.
    * @return {@code true} if the optional SuperClassAccess child exists, {@code false} if it does not.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public boolean hasSuperClassAccess() {
+  @Override
+public boolean hasSuperClassAccess() {
     return getSuperClassAccessOpt().getNumChild() != 0;
   }
-  /**
+/**
    * Retrieves the (optional) SuperClassAccess child.
    * @return The SuperClassAccess child, if it exists. Returns {@code null} otherwise.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperClassAccess() {
     return (Access)getSuperClassAccessOpt().getChild(0);
   }
-  /**
+/**
    * Replaces the (optional) SuperClassAccess child.
    * @param node The new node to be used as the SuperClassAccess child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccess(Access node) {
+  @Override
+public void setSuperClassAccess(Access node) {
     getSuperClassAccessOpt().setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the optional node for child SuperClassAccess. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The optional node for child SuperClassAccess.
@@ -287,41 +323,45 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOptNoTransform() {
     return (Opt<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Retrieves the child position of the optional child SuperClassAccess.
    * @return The the child position of the optional child SuperClassAccess.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int getSuperClassAccessOptChildPosition() {
+  @Override
+protected int getSuperClassAccessOptChildPosition() {
     return 1;
   }
-  /**
+/**
    * Replaces the Implements list.
    * @param list The new list node to be used as the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setImplementsList(List<Access> list) {
+  @Override
+public void setImplementsList(List<Access> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * @return Number of children in the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumImplements() {
+  @Override
+public int getNumImplements() {
     return getImplementsList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Implements list.
@@ -329,10 +369,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public int getNumImplementsNoTransform() {
+  @Override
+public int getNumImplementsNoTransform() {
     return getImplementsListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Implements list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Implements list.
@@ -340,31 +381,34 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getImplements(int i) {
     return (Access)getImplementsList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Implements list.
    * @param node The element to append to the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addImplements(Access node) {
+  @Override
+public void addImplements(Access node) {
     List<Access> list = (parent == null || state == null) ? getImplementsListNoTransform() : getImplementsList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addImplementsNoTransform(Access node) {
+  @Override
+public void addImplementsNoTransform(Access node) {
     List<Access> list = getImplementsListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Implements list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -372,21 +416,23 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public void setImplements(Access node, int i) {
+  @Override
+public void setImplements(Access node, int i) {
     List<Access> list = getImplementsList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getImplementss() {
+  @Override
+public List<Access> getImplementss() {
     return getImplementsList();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -394,10 +440,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<Access> getImplementssNoTransform() {
+  @Override
+public List<Access> getImplementssNoTransform() {
     return getImplementsListNoTransform();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -405,40 +452,44 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<Access> getImplementsListNoTransform() {
+  @Override
+public List<Access> getImplementsListNoTransform() {
     return (List<Access>)getChildNoTransform(2);
   }
-  /**
+/**
    * Retrieves the child position of the Implements list.
    * @return The the child position of the Implements list.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int getImplementsListChildPosition() {
+  @Override
+protected int getImplementsListChildPosition() {
     return 2;
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 3);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -446,10 +497,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -457,31 +509,34 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -489,21 +544,23 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -511,10 +568,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -522,40 +580,44 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclListNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(3);
   }
-  /**
+/**
    * Retrieves the child position of the BodyDecl list.
    * @return The the child position of the BodyDecl list.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int getBodyDeclListChildPosition() {
+  @Override
+protected int getBodyDeclListChildPosition() {
     return 3;
   }
-  /**
+/**
    * Replaces the Argument list.
    * @param list The new list node to be used as the Argument list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setArgumentList(List<Access> list) {
+  @Override
+public void setArgumentList(List<Access> list) {
     setChild(list, 4);
   }
-  /**
+/**
    * Retrieves the number of children in the Argument list.
    * @return Number of children in the Argument list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumArgument() {
+  @Override
+public int getNumArgument() {
     return getArgumentList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Argument list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Argument list.
@@ -563,10 +625,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public int getNumArgumentNoTransform() {
+  @Override
+public int getNumArgumentNoTransform() {
     return getArgumentListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Argument list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Argument list.
@@ -574,31 +637,34 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getArgument(int i) {
     return (Access)getArgumentList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Argument list.
    * @param node The element to append to the Argument list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addArgument(Access node) {
+  @Override
+public void addArgument(Access node) {
     List<Access> list = (parent == null || state == null) ? getArgumentListNoTransform() : getArgumentList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addArgumentNoTransform(Access node) {
+  @Override
+public void addArgumentNoTransform(Access node) {
     List<Access> list = getArgumentListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Argument list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -606,21 +672,23 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public void setArgument(Access node, int i) {
+  @Override
+public void setArgument(Access node, int i) {
     List<Access> list = getArgumentList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Argument list.
    * @return The node representing the Argument list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getArguments() {
+  @Override
+public List<Access> getArguments() {
     return getArgumentList();
   }
-  /**
+/**
    * Retrieves the Argument list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Argument list.
@@ -628,10 +696,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<Access> getArgumentsNoTransform() {
+  @Override
+public List<Access> getArgumentsNoTransform() {
     return getArgumentListNoTransform();
   }
-  /**
+/**
    * Retrieves the Argument list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Argument list.
@@ -639,10 +708,11 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
    * @ast method 
    * 
    */
-  public List<Access> getArgumentListNoTransform() {
+  @Override
+public List<Access> getArgumentListNoTransform() {
     return (List<Access>)getChildNoTransform(4);
   }
-  /**
+/**
    * Retrieves the child position of the Argument list.
    * @return The the child position of the Argument list.
    * @apilevel low-level
@@ -652,53 +722,49 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
   protected int getArgumentListChildPosition() {
     return 4;
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:569
    */
-  public TypeDecl hostType() {
+  @Override
+public TypeDecl hostType() {
     ASTNode$State state = state();
     try {  return original();  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:245
    */
-  public boolean isRawType() {
+  @Override
+public boolean isRawType() {
     ASTNode$State state = state();
     try {  return true;  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:577
    */
-  public boolean sameSignature(Access a) {
+  @Override
+public boolean sameSignature(Access a) {
     ASTNode$State state = state();
     try {  return a instanceof TypeAccess && a.type() == this;  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getArgumentList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getArgumentList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:755
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getArgumentList() {
     if(getArgumentList_computed) {
       return (List) getChild(getArgumentListChildPosition());
@@ -708,53 +774,59 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
   boolean isFinal = this.is$Final();
     getArgumentList_value = getArgumentList_compute();
     setArgumentList(getArgumentList_value);
-      if(true) getArgumentList_computed = true;
+      if(true) {
+		getArgumentList_computed = true;
+	}
     return (List) getChild(getArgumentListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getArgumentList_compute() {  return ((GenericClassDecl)genericDecl()).createArgumentList(new ArrayList());  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:30
    */
-  public String nameWithArgs() {
+  @Override
+public String nameWithArgs() {
     ASTNode$State state = state();
     try {  return name();  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:14
    */
-  public boolean supertypeGenericClassDecl(GenericClassDecl type) {
+  @Override
+public boolean supertypeGenericClassDecl(GenericClassDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(genericDecl().original());  }
     finally {
     }
   }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:25
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -768,7 +840,7 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -789,67 +861,72 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeRawClassDecl(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:421
    */
-  public boolean supertypeClassDecl(ClassDecl type) {
+  @Override
+public boolean supertypeClassDecl(ClassDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(genericDecl().original());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:437
    */
-  public boolean supertypeInterfaceDecl(InterfaceDecl type) {
+  @Override
+public boolean supertypeInterfaceDecl(InterfaceDecl type) {
     ASTNode$State state = state();
     try {  return type.subtype(genericDecl().original());  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:125
    */
-  public boolean supertypeParClassDecl(ParClassDecl type) {
+  @Override
+public boolean supertypeParClassDecl(ParClassDecl type) {
     ASTNode$State state = state();
     try {  return type.genericDecl().original().subtype(genericDecl().original());  }
     finally {
     }
   }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:397
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -857,17 +934,20 @@ public class RawClassDecl extends ParClassDecl implements Cloneable {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
