@@ -38,18 +38,21 @@ public class NumLocalsMetric extends ASTMetric {
    * Will be invoked by the super as well as whenever a new class is entered
    * 
    */
-  public void reset() {
+  @Override
+public void reset() {
     numLocals = 0;
   }
 
   /*
    * Will be invoked whenever we are leaving a subtree which was a classDecl
    */
-  public void addMetrics(ClassData data) {
-    data.addMetric(new MetricData("Number-Locals", new Integer(numLocals)));
+  @Override
+public void addMetrics(ClassData data) {
+    data.addMetric(new MetricData("Number-Locals", Integer.valueOf(numLocals)));
   }
 
-  public NodeVisitor enter(Node parent, Node n) {
+  @Override
+public NodeVisitor enter(Node parent, Node n) {
     if (n instanceof LocalDecl) {
       // System.out.println("Local declared is"+ ((LocalDecl)n).name() );
       numLocals++;
