@@ -44,34 +44,35 @@ import polyglot.ast.Synchronized;
 import polyglot.ast.Try;
 import polyglot.util.CodeWriter;
 import polyglot.visit.NodeVisitor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class StmtSumWeightedByDepth extends ASTMetric {
 
-  int currentDepth;
-  int sum;
-  int maxDepth;
-  int numNodes;
+  private static final Logger logger = LoggerFactory.getLogger(StmtSumWeightedByDepth.class);
+public static boolean tmpAbruptChecker = false;
+int currentDepth;
+int sum;
+int maxDepth;
+int numNodes;
+Stack<ArrayList> labelNodesSoFar = new Stack<>();
+ArrayList<Node> blocksWithAbruptFlow = new ArrayList<>();
+HashMap<Node, Integer> stmtToMetric = new HashMap<>();
+HashMap<Node, Integer> stmtToMetricDepth = new HashMap<>();
 
-  Stack<ArrayList> labelNodesSoFar = new Stack<ArrayList>();
-  ArrayList<Node> blocksWithAbruptFlow = new ArrayList<Node>();
-  HashMap<Node, Integer> stmtToMetric = new HashMap<Node, Integer>();
-  HashMap<Node, Integer> stmtToMetricDepth = new HashMap<Node, Integer>();
-
-  public static boolean tmpAbruptChecker = false;
-
-  public StmtSumWeightedByDepth(Node node) {
+public StmtSumWeightedByDepth(Node node) {
     super(node);
   }
 
-  public void printAstMetric(Node n, CodeWriter w) {
-    if (n instanceof Stmt) {
-      if (stmtToMetric.containsKey(n)) {
-        w.write(" // sum= " + stmtToMetric.get(n) + " : depth= " + stmtToMetricDepth.get(n) + "\t");
+@Override
+public void printAstMetric(Node n, CodeWriter w) {
+    if (n instanceof Stmt && stmtToMetric.containsKey(n)) {
+        w.write(new StringBuilder().append(" // sum= ").append(stmtToMetric.get(n)).append(" : depth= ").append(stmtToMetricDepth.get(n)).append("\t").toString());
       }
-    }
   }
 
-  public void reset() {
+@Override
+public void reset() {
     // if not one, then fields and method sigs don't get counted
     currentDepth = 1; // inside a class
     maxDepth = 1;
@@ -79,28 +80,29 @@ public class StmtSumWeightedByDepth extends ASTMetric {
     numNodes = 0;
   }
 
-  public void addMetrics(ClassData data) {
+@Override
+public void addMetrics(ClassData data) {
     // data.addMetric(new MetricData("MaxDepth",new Integer(maxDepth)));
 
-    data.addMetric(new MetricData("D-W-Complexity", new Double(sum)));
+    data.addMetric(new MetricData("D-W-Complexity", Double.valueOf(sum)));
 
-    data.addMetric(new MetricData("AST-Node-Count", new Integer(numNodes)));
+    data.addMetric(new MetricData("AST-Node-Count", Integer.valueOf(numNodes)));
   }
 
-  private void increaseDepth() {
-    System.out.println("Increasing depth");
+private void increaseDepth() {
+    logger.info("Increasing depth");
     currentDepth++;
     if (currentDepth > maxDepth) {
       maxDepth = currentDepth;
     }
   }
 
-  private void decreaseDepth() {
-    System.out.println("Decreasing depth");
+private void decreaseDepth() {
+    logger.info("Decreasing depth");
     currentDepth--;
   }
 
-  /*
+/*
    * List of Node types which increase depth of traversal!!! Any construct where one can have a { } increases the depth hence
    * even though if(cond) stmt doesnt expicitly use a block its depth is still +1 when executing the stmt
    *
@@ -112,7 +114,8 @@ public class StmtSumWeightedByDepth extends ASTMetric {
    *
    * Block ... if it is a block within a block, add currentDepth plus increment depth ONLY if it has abrupt flow out of it.
    */
-  public NodeVisitor enter(Node parent, Node n) {
+  @Override
+public NodeVisitor enter(Node parent, Node n) {
     numNodes++;
     if (n instanceof CodeDecl) {
       // maintain stack of label arrays (can't have label from inside method to outside)
@@ -125,13 +128,14 @@ public class StmtSumWeightedByDepth extends ASTMetric {
     if (n instanceof If || n instanceof Loop || n instanceof Try || n instanceof Switch || n instanceof LocalClassDecl
         || n instanceof Synchronized || n instanceof ProcedureDecl || n instanceof Initializer) {
       sum += currentDepth * 2;
-      System.out.println(n);
+      logger.info(String.valueOf(n));
       increaseDepth();
     } else if (parent instanceof Block && n instanceof Block) {
       StmtSumWeightedByDepth.tmpAbruptChecker = false;
       n.visit(new NodeVisitor() {
         // extended NodeVisitor that checks for branching out of a block
-        public NodeVisitor enter(Node parent, Node node) {
+        @Override
+		public NodeVisitor enter(Node parent, Node node) {
           if (node instanceof Branch) {
             Branch b = (Branch) node;
             // null branching out of a plain block is NOT ALLOWED!
@@ -143,7 +147,8 @@ public class StmtSumWeightedByDepth extends ASTMetric {
         }
 
         // this method simply stops further node visiting if we found our info
-        public Node override(Node parent, Node node) {
+        @Override
+		public Node override(Node parent, Node node) {
           if (StmtSumWeightedByDepth.tmpAbruptChecker) {
             return node;
           }
@@ -154,27 +159,28 @@ public class StmtSumWeightedByDepth extends ASTMetric {
       if (StmtSumWeightedByDepth.tmpAbruptChecker) {
         blocksWithAbruptFlow.add(n);
         sum += currentDepth * 2;
-        System.out.println(n);
+        logger.info(String.valueOf(n));
         increaseDepth();
       }
     }
     // switch from Stmt to Expr here, since Expr is the smallest unit
     else if (n instanceof Expr || n instanceof Formal) {
-      System.out.print(sum + "  " + n + "  ");
+      logger.info(new StringBuilder().append(sum).append("  ").append(n).append("  ").toString());
       sum += currentDepth * 2;
-      System.out.println(sum);
+      logger.info(String.valueOf(sum));
     }
 
     // carry metric cummulative for each statement for metricPrettyPrinter
     if (n instanceof Stmt) {
-      stmtToMetric.put(n, new Integer(sum));
-      stmtToMetricDepth.put(n, new Integer(currentDepth));
+      stmtToMetric.put(n, Integer.valueOf(sum));
+      stmtToMetricDepth.put(n, Integer.valueOf(currentDepth));
     }
 
     return enter(n);
   }
 
-  public Node leave(Node old, Node n, NodeVisitor v) {
+@Override
+public Node leave(Node old, Node n, NodeVisitor v) {
 
     // stack maintenance, if leaving a method
     if (n instanceof CodeDecl) {
